--- a/codecats_cv/view/experience.html
+++ b/codecats_cv/view/experience.html
@@ -28,14 +28,15 @@
                             <i class="{{ xp.flag }} flag"></i>{{ xp.location }}
                         </p>
                     </div>
-                    {% if user.isLoggedIn %}
-                        <div class="ui right floated main menu">
-                            <a class="bug popup icon item"
-                               data-content="Edit this entry" href="#">
-                                <i class="edit icon"></i>
-                            </a>
-                        </div>
-                    {% endif %}
+{#                FIXME adapt for flask-login #}
+{#                    {% if user.isLoggedIn %}#}
+{#                        <div class="ui right floated main menu">#}
+{#                            <a class="bug popup icon item"#}
+{#                               data-content="Edit this entry" href="#">#}
+{#                                <i class="edit icon"></i>#}
+{#                            </a>#}
+{#                        </div>#}
+{#                    {% endif %}#}
                 </div>
             </div>
         {% endfor %}
