--- a/codecats_cv/view/experience.html
+++ b/codecats_cv/view/experience.html
@@ -3,7 +3,7 @@
         <i class="{{ cat.icon }} icon"></i> {{ cat.title }}
     </div>
 
-    <div class="ui relaxed divided items">
+    <div class="ui relaxed items">
         {% for xp in experiences %}
             <div class="item">
                 <div class="ui small image">
