--- a/codecats_cv/view/languages.html
+++ b/codecats_cv/view/languages.html
@@ -12,7 +12,7 @@
                 value   : {{ language.level }},
                 text    : {
                     active  : '{{ language.name }}: {percent}% fluent',
-                    success : '{{ language.name }}: fluent' }
+                    success : '{{ language.name }}: native' }
                 });
         });
     </script>
