--- a/codecats_cv/view/main.html
+++ b/codecats_cv/view/main.html
@@ -3,41 +3,21 @@
 {% block head %}
     {{ super() }}
 {% endblock %}
+
 {% block content %}
-    <div class="ui grid">
-        <div class="ui four wide stackable column">
-            {% include 'contact.html' with context %}
-            {% include 'languages.html' with context %}
-            {% include 'skills.html' with context %}
-        </div>
-
-        <div class="ui eight wide stackable column">
-            {% include 'experience.html' with context %}
-        </div>
-
-        <div class="ui four wide stackable column">
-            <div class="ui grid">
-                <div class="ui three wide stackable column">
-                    <a class="ui animated fade primary button" href="{{ url_for('add_entry') }}">
-                        <div class="visible content"><i class="add icon"></i></div>
-                        <div class="hidden content">Add</div>
-                    </a>
-                </div>
-                <div class="ui eight wide stackable remote search column">
-                    <div class="ui icon input">
-                        <input class="prompt" type="text" placeholder="Search...">
-                        <i class="search icon"></i>
-                    </div>
-                    <div class="results"></div>
-                </div>
-                <div class="ui five wide stackable column">
-                    <a class="ui primary button"
-                       href="https://github.com/obestwalter/codecats-cv"
-                       target="_blank">
-                        <i class="github icon"></i>Code
-                    </a>
-                </div>
+    <div class="ui three column grid">
+        <div class="row">
+            <div class="ui four wide stackable column">
+                {% include 'column-1.html' with context %}
             </div>
+            <div class="ui eight wide stackable column">
+                {% include 'column-2.html' with context %}
+            </div>
+            <div class="ui four wide stackable column">
+                {% include 'column-3.html' with context %}
+            </div>
+        </div>
+        <div class="row">
         </div>
     </div>
 {% endblock %}
