--- a/codecats_cv/view/experience.html
+++ b/codecats_cv/view/experience.html
@@ -14,7 +14,7 @@
                     <div class="meta">
                         <p class="created">
                             <a class="meta" href="{{ xp.link }}" target="_blank">{{ xp.what }}</a>
-                            | {{ xp.duration }}
+                            | {{ xp.when }}
                         </p>
                     </div>
                     <div class="description">{{ xp.description | safe }}</div>
